円グラフ追加

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
+	<script src="https://kit.fontawesome.com/5f5276d353.js" crossorigin="anonymous"></script>
 	<title>Koruri Araki's Portfolio</title>
 </head>
 <body>
@@ -34,7 +35,33 @@
 				<p>どうぞよろしくお願いいたします。</p>
 				<a href="https://booklog.jp/users/06907e9c37973d16" target="_blank" rel="noopener noreferrer">&raquo;最近読んだ本はこちら（ブクログへ移動）</a>
 			</div>
-			<img class="image" src="./images/img01.jpg" alt="tree">
+			<h3 class="heading3-2">興味の割合</h3>
+			<div class="flexbox interests">
+				<div class="pie">
+					<span class="pie-cats">
+						cats
+						<i class="fa-solid fa-cat"></i>
+					</span>
+					<span class="pie-programming">
+						programming
+						<i class="fa-solid fa-code"></i>
+					</span>
+					<span class="pie-english">
+						English
+						<i class="fa-solid fa-book"></i>
+					</span>
+					<span class="pie-radio">
+						radio
+						<i class="fa-solid fa-radio"></i>
+					</span>
+				</div>
+				<div class="interests-text">
+					<p><span>猫：50％</span><br>2匹飼っている。X(Twitter)でも日々猫画像を収集中</p>
+					<p><span>プログラミング：25％</span><br>基本情報技術者取得(2023年8月)</p>
+					<p><span>英語：15％</span><br>NHKラジオ英語受講中</p>
+					<p><span>ラジオ：10％</span><br>TBSラジオリスナー</p>
+				</div>
+			</div>
 		</div>
 		<div class="flexbox">
 			<div class="skills">
